Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-671

proton-c: Messenger doesn't provide a way to set the link settlement modes it uses

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.7
    • proton-0.8
    • proton-c
    • None

    Description

      Messenger doesn't provide a way to set link settlement modes. Messenger defaults to PN_SND_SETTLED and PN_RCV_FIRST and doesn't provide a way to override that behaviour.

      Patches attached to allow these to be configured.

      Attachments

        Activity

          People

            rhs Rafael H. Schloming
            dnwe Dominic Evans
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: