PROTON-671: patch for settlement modes from dominic

git-svn-id: https://svn.apache.org/repos/asf/qpid/proton/trunk@1626084 13f79535-47bb-0310-9956-ffa450edef68